8194992: Null pointer dereference in MultiNode::proj_out related to loopexit()

Reviewed-by: kvn, thartmann